[gd_scene load_steps=9 format=2]

[ext_resource path="res://utility/this_handles_drags.tscn" type="PackedScene" id=1]
[ext_resource path="res://stuff/bio_scanner.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 40 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 300, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30, 20 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 120 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.266667, 0.862745, 0.145098, 0.478431 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Scan"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, -2, -0.5, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.266667, 0.862745, 0.145098, 0.478431 ), Color( 0.266667, 0.862745, 0.145098, 0.160784 ), Color( 0.266667, 0.862745, 0.145098, 0.854902 ), Color( 0.266667, 0.862745, 0.145098, 0.301961 ), Color( 0.266667, 0.862745, 0.145098, 0.776471 ), Color( 0.266667, 0.862745, 0.145098, 0.270588 ), Color( 0.266667, 0.862745, 0.145098, 0.478431 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "complete_scan"
} ]
}

[node name="Bio-Scanner" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( -300, -30, -300, 30, 300, 30, 300, -30, -300, -30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -300, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 300, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2( 0, 30 )
shape = SubResource( 3 )

[node name="ScanSlider" type="RigidBody2D" parent="."]
collision_layer = 0
collision_mask = 2
gravity_scale = 0.0
linear_damp = 2.0

[node name="Draggy" parent="ScanSlider" instance=ExtResource( 1 )]
node_b = NodePath("..")

[node name="MouseDetector" parent="ScanSlider/Draggy" index="2"]
margin_left = -30.0
margin_top = -20.0
margin_right = 30.0
margin_bottom = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScanSlider"]
shape = SubResource( 4 )

[node name="ScanArea" type="Area2D" parent="ScanSlider"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScanSlider/ScanArea"]
position = Vector2( 0, 90 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="ScanSlider/ScanArea"]
color = Color( 0.266667, 0.862745, 0.145098, 0.478431 )
polygon = PoolVector2Array( -40, -30, -40, 210, 40, 210, 40, -30 )

[node name="Animator" type="AnimationPlayer" parent="ScanSlider/ScanArea"]
anims/RESET = SubResource( 5 )
anims/Scan = SubResource( 6 )

[node name="Button" type="Button" parent="."]
margin_left = 319.0
margin_top = -17.0
margin_right = 360.0
margin_bottom = 3.0
text = "scan"

[connection signal="body_entered" from="ScanSlider/ScanArea" to="." method="_on_ScanArea_body_entered"]
[connection signal="body_exited" from="ScanSlider/ScanArea" to="." method="_on_ScanArea_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[editable path="ScanSlider/Draggy"]
